tests/NormalTests/paczka2/big_fuzzy/58070488.err
Error in line 11: A152 A300 71,7
Error in line 12: A152 A152 72,9
Error in line 28: o57MCL A300 7,9
Error in line 26: RgRn S730 97,2
Error in line 22: IE5 A318 63,0
Error in line 29: o57MCL A318 58,0
Error in line 33: rRbD A318 51,7
Error in line 47: IE5 S730 65,2
Error in line 38: rRbD A300 92,6
Error in line 50: o57MCL A152 97,2
Error in line 64: eLdkLH A152 66,9
Error in line 56: mYKVPvks A152 70,1
Error in line 70: rRbD A300 71,67
Error in line 67: mYKVPvks A300 23,7
Error in line 71: mYKVPvks S730 2,7
Error in line 62: A152 A152 59,9
Error in line 68: rRbD A152 91,3
Error in line 75: mYKVPvks A3 89,8
Error in line 89: o57MCL A152 54,1
Error in line 90: mYKVPvks A152 35,3
Error in line 93: mYKVPvks A300 63,5
Error in line 94: mYKVPvks A318 31,9
Error in line 101: o57MCL S730 -1,1
Error in line 102: mYKVPvks S73+ 79,3
Error in line 99: rRbD A300 60,2
Error in line 108: A152 S730 462,2
Error in line 110: A152 A152 61,2
Error in line 113: RgRn S730 45,2
Error in line 117: mYKVPvks S730 145,9
Error in line 120: A152 A318 22,5
Error in line 134: mYKVPvks S730 86,3
Error in line 143: rRbD S730 44,0
Error in line 146: eLdkLH S730 81,7
Error in line 148: eLdkLH A318 69,4
Error in line 152: rRbD A152 34,8
Error in line 151: RgRn A152 95,7
Error in line 163: RgRn S730 74,3
Error in line 165: RgRn A152 46,8
Error in line 181: mYKVPvks A300 27,9
Error in line 180: A152 A152 49,6
Error in line 193: eLdkLH A318 89,9
Error in line 186: IE5 A318 425,5
Error in line 196: rRbD A300 57,6
Error in line 200: mYKVPvks S730 85,4
Error in line 201: RgRn S730 168,7
Error in line 220: eLdkLH S730 37,9
Error in line 238: IE5 A152 25,1
Error in line 243: IE5 A300 87,3
